--- a/frontend/src/app/features/image-analyzer/pages/image-analyzer-page/image-analyzer-page.component.scss
+++ b/frontend/src/app/features/image-analyzer/pages/image-analyzer-page/image-analyzer-page.component.scss
@@ -1,11 +1,7 @@
 .page {
-  padding: 24px;
-}
-
-h1 {
-  margin: 0 0 8px;
-}
-
-p {
-  color: #666;
+  min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 32px 16px;
 }
