--- a/frontend/src/app/shared/ui/atoms/file-input/file-input.component.html
+++ b/frontend/src/app/shared/ui/atoms/file-input/file-input.component.html
@@ -1,5 +1,5 @@
-<div class="file-input">
-  <button mat-stroked-button type="button" (click)="fileInput.click()">
+<div class="file-input flex items-center gap-3">
+  <button class="btn-tonal" type="button" (click)="fileInput.click()">
     Seleccionar imagen
   </button>
 
