--- a/frontend/src/app/shared/ui/atoms/primary-button/primary-button.component.html
+++ b/frontend/src/app/shared/ui/atoms/primary-button/primary-button.component.html
@@ -1,8 +1,7 @@
 <button
-  mat-raised-button
+  class="btn-primary"
   [type]="type"
   [disabled]="disabled"
-  color="primary"
 >
   {{ label }}
 </button>
