--- a/frontend/src/app/shared/ui/atoms/file-input/file-input.component.html
+++ b/frontend/src/app/shared/ui/atoms/file-input/file-input.component.html
@@ -1,5 +1,5 @@
 <div class="file-input flex flex-col sm:flex-row sm:items-center gap-2 sm:gap-3 min-w-0">
-  <button class="btn-tonal w-full sm:w-auto" type="button" (click)="fileInput.click()">
+  <button class="btn-tonal w-1/2 mx-auto block sm:w-auto" type="button" (click)="fileInput.click()">
     Seleccionar imagen
   </button>
 
